Added a ton of basic fight guides, added skeletons to mdx files for now.

--- a/src/content/docs/drs/bloodrage.mdx
+++ b/src/content/docs/drs/bloodrage.mdx
@@ -23,6 +23,8 @@ Page Written by Valagnar Shade and O'palt Jhaid
 - Blood Rush: The 60% cooldown reduction/damage bonus/MP + HP regen part of BR
 - Gap closer: Your job’s gapcloser (Intervene, Rough Divide, Onslaught, Plunge)
 - Impetus: Lost Impetus, counts as a gapcloser for the purpose of building stacks of Blood Rage
+<br/><hr/>
+
 
 ## Blood Rage 101
 Lost blood rage is lost action obtained from “Forgotten Fragments of Cunning” which are only obtainable in the Dalriada after the first fight encounter. You need to be Resistance rank 25 to appraise and obtain the action yourself but you can get the action for use if you utilize Lost Mimic ignoring the resistance rank requirement.
@@ -73,7 +75,7 @@ Note: Infuriate doesn’t get its cooldown reduced by Blood Rush
 #### DRK
 Blood Rush’s MP gain overtime allows DRK to dump a lot of Edge of Shadows. In addition, because of the 75% cooldown reduction, Edge of Shadow can be spammed 
 ridiculously fast. Given enough MP support from other party members (Lost Full Cure, PRanged Cure2, Ether potion kits) you can realistically spend the entire Blood Rush window mashing Edge of Shadow.
-If you don’t have an MP support, ensure you have enough blood gauge to use Living Shadow. Make sure all charges of Delirium and Blood Weapon are used. 
+If you don’t have an MP support, Make sure all charges of Delirium and Blood Weapon are used. 
 Use Carve and Spit when it’s up. Salted Earth can be used twice under BR allowing a 3rd usage under FoP after the BR window, however can be difficult due to how many oGCDs DRKs have to weave.
 
 #### GNB (this will likely changing in Dawntrail)
@@ -105,6 +107,7 @@ it’s important to get as much as you can under BR. If the DRK player has a str
 ### Example Videos
 - <a href="https://www.youtube.com/watch?v=jZNoOtlEppc&feature=youtu.be" target="_blank">GNB Blood Rage 6 min Demonstration by Valagnar Shade</a>
 - <a href="https://www.youtube.com/watch?v=LskfJWkP7QE&feature=youtu.be" target="_blank">Small Meme Video that Demonstrates the timing for building stacks and ability usage during Blood Rush by Valagnar Shade</a>
+<br/><hr/>
 
 ## Impetus Chaining
 :::danger[WARNING!!!!]
@@ -112,7 +115,8 @@ PLEASE GET YOUR PARTY/THE RAID LEAD’S PERMISSION OUTSIDE OF RECLEARS! THIS CAN
 :::
 
 ### Why Impetus Chain?
-Impetus chaining is not only very fun, it’s also a gain over BR + FoP. When done correctly, you’ll be in Blood Rush (the cooldown reduction part of BR) for about ⅔ of the fight. While it isn’t as strong as single-fight dump strats like long BR chaining, it’s a good way to spread out damage evenly throughout the instance. Did I mention it’s fun?
+Impetus chaining is not only very fun, it’s also a gain over BR + FoP *in fights with longer kill times*. When done correctly, you’ll be in Blood Rush (the cooldown reduction part of BR) for about ⅔ of the fight. While it isn’t as strong as single-fight dump strats like long BR chaining, 
+it’s a good way to spread out damage evenly throughout the instance. Did I mention it’s fun?
 
 ### What you'll need
 - Blood Rage + Impetus slotted
