--- a/src/content/docs/drs/guides/dahu.mdx
+++ b/src/content/docs/drs/guides/dahu.mdx
@@ -3,4 +3,20 @@ title: Dahu
 description: IM PICKLE RICCCCCCCCCK
 ---
 
-WIP
+import ActionIcon from '@components/ActionIcon.astro'
+import { Image } from 'astro:assets';
+import Footer from "@components/Footer.astro";
+
+<link
+  rel="stylesheet"
+  media="(prefers-color-scheme:dark)"
+  href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/themes/dark.css"
+  onload="document.documentElement.classList.add('sl-theme-dark');"
+/>
+<script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
+
+### Markers
+**Fight Markers**
+```
+{"Name":"Dahu","MapID":761,"A":{"X":33.188,"Y":11.102,"Z":86.913,"ID":0,"Active":true},"B":{"X":132.167,"Y":10.417,"Z":87.593,"ID":1,"Active":true},"C":{"X":132.89,"Y":10.904,"Z":188.521,"ID":2,"Active":true},"D":{"X":31.087,"Y":10.926,"Z":188.169,"ID":3,"Active":true},"One":{"X":66.399,"Y":11.999,"Z":114.944,"ID":4,"Active":true},"Two":{"X":104.36,"Y":12.0,"Z":121.022,"ID":5,"Active":true},"Three":{"X":97.936,"Y":11.999,"Z":160.842,"ID":6,"Active":true},"Four":{"X":59.489,"Y":12.0,"Z":153.928,"ID":7,"Active":true}}
+```
