--- a/src/content/docs/drs/guides/phantom.mdx
+++ b/src/content/docs/drs/guides/phantom.mdx
@@ -3,4 +3,20 @@ title: Phantom
 description: Hey guys isn't ice spikes FUNNY
 ---
 
-WIP
+import ActionIcon from '@components/ActionIcon.astro'
+import { Image } from 'astro:assets';
+import Footer from "@components/Footer.astro";
+
+<link
+  rel="stylesheet"
+  media="(prefers-color-scheme:dark)"
+  href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/themes/dark.css"
+  onload="document.documentElement.classList.add('sl-theme-dark');"
+/>
+<script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
+
+### Markers
+**Fight Markers**
+```
+{"Name":"Phantom","MapID":761,"A":{"X":183.947,"Y":-96.999,"Z":-389.727,"ID":0,"Active":true},"B":{"X":195.884,"Y":-96.999,"Z":-390.592,"ID":1,"Active":true},"C":{"X":208.037,"Y":-96.999,"Z":-390.119,"ID":2,"Active":true},"D":{"X":219.958,"Y":-96.999,"Z":-391.045,"ID":3,"Active":true},"One":{"X":184.007,"Y":-96.999,"Z":-351.083,"ID":4,"Active":true},"Two":{"X":195.88,"Y":-96.999,"Z":-351.114,"ID":5,"Active":true},"Three":{"X":208.095,"Y":-96.999,"Z":-351.242,"ID":6,"Active":true},"Four":{"X":220.076,"Y":-96.999,"Z":-351.263,"ID":7,"Active":true}}
+```
