--- a/src/content/docs/drs/holsters/phys.mdx
+++ b/src/content/docs/drs/holsters/phys.mdx
@@ -36,6 +36,7 @@ You will only need **one** pure essence each time you enter Delubrum Reginae. Es
 - [**Basic Mimic Holster**](#Basic-mimic-holster)
 - [**Excellence Dervish**](#excellence-dervish)
 - [**Physical Excellence Battery**](#physical-excellence-battery)
+- [**Cure 2 Provider**](#cure-2-provider)
 </sl-card>
 
 <br/><hr/>
@@ -285,7 +286,6 @@ will extend the dervish window significantly and reduce a lot of the stress of o
 
 Remember, **Mimic** does not work in combat!
 :::
-
 <br/><hr/>
 
 ### Physical Excellence Battery
@@ -371,9 +371,94 @@ together. From there, the fight will go on with you pressing Font/Dervish during
     </tr>
   </table>
 </div>
-
 :::danger[Slotting Excellence]
 Make sure to slot in your Excellence at the assigned fight! Slotting Excellence too early could greatly lower your damage and waste another person's actions.
 :::
+<br/><hr/>
+
+### Cure 2 Provider
+:::tip[Advanced Holster]
+This holster is meant for experienced players and those with higher amounts of haste. There is extra micromanagement with this holster that can be distracting if you are new to Delubrum (Savage).
+:::
+
+You are now the MP battery for all those hungry MP users out there. Your focus shifts from doing as much damage as possible to supporting the MP hog jobs like DRKs, Profane healers, and the non-BLM casters. When you target a player
+and cast **Cure 2** on them they will recieve an 18s Refresh buff. This is essentially a Lucid Dremaing on steroids. Your one goal is to keep this up as often as you can on any aforementioned MP users. **Lost Cure 2** is a oGCD ability with a 5 second recast time.
+This means you can easily cycle it through a party of ~4 players pretty easily.
+<div class="two-holster-tables">
+  <table class="phys">
+  <caption>**Pre-load**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="4">Lost Action</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/cure2.png"/></td>
+      <td colspan="3">**Lost Cure 2**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/dervish.png"/></td>
+      <td colspan="3">**Lost Dervish**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/fiendhunter.png"/></td>
+      <td colspan="3">**Pure Essence of the Fiendhunter**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td colspan="3">**Resistance Reraiser**</td>
+    </tr>
+  </table>
+
+  <table class="phys">
+  <caption>**Instance Ready**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="2">Lost Action</th>
+      <th>Qty.</th>
+      <th>Wt.</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/cure2.png"/></td>
+      <td>**Lost Cure 2**</td>
+      <td>5</td>
+      <td>25</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/dervish.png"/></td>
+      <td>**Lost Dervish**</td>
+      <td>2</td>
+      <td>16</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/percept.png"/></td>
+      <td>**Lost Perception**</td>
+      <td>1</td>
+      <td>44</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td>**Resistance Reraiser**</td>
+      <td>2</td>
+      <td>16</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
+      <td>**Light Curtain**</td>
+      <td>2</td>
+      <td>2</td>
+    </tr>
+    <tr style="background-color: transparent">
+      <td style="border: none;"/>
+      <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
+      <td>63</td>
+    </tr>
+  </table>
+</div>
 
 <Footer />
