--- a/src/content/docs/drs/guides/lord.mdx
+++ b/src/content/docs/drs/guides/lord.mdx
@@ -3,4 +3,25 @@ title: Stygimoloch Lord
 description: we can dance if you want to
 ---
 
-WIP
+import ActionIcon from '@components/ActionIcon.astro'
+import { Image } from 'astro:assets';
+import Footer from "@components/Footer.astro";
+
+<link
+  rel="stylesheet"
+  media="(prefers-color-scheme:dark)"
+  href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/themes/dark.css"
+  onload="document.documentElement.classList.add('sl-theme-dark');"
+/>
+<script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
+
+### Markers
+**Reflector/Tank Setup Markers**
+```
+{"Name":"Mino Setup","MapID":761,"A":{"X":0.0,"Y":0.0,"Z":0.0,"ID":0,"Active":false},"B":{"X":-425.0,"Y":-191.0,"Z":-157.5,"ID":1,"Active":true},"C":{"X":0.0,"Y":0.0,"Z":0.0,"ID":2,"Active":false},"D":{"X":-420.5,"Y":-191.0,"Z":-157.5,"ID":3,"Active":true},"One":{"X":-408.0,"Y":-191.0,"Z":-160.0,"ID":4,"Active":true},"Two":{"X":-405.5,"Y":-191.0,"Z":-157.5,"ID":5,"Active":true},"Three":{"X":-408.0,"Y":-191.0,"Z":-155.0,"ID":6,"Active":true},"Four":{"X":-410.5,"Y":-191.0,"Z":-157.5,"ID":7,"Active":true}}
+```
+
+**Fight Markers**
+```
+{"Name":"Mino Lord","MapID":761,"A":{"X":-426.153,"Y":-191.0,"Z":-194.456,"ID":0,"Active":true},"B":{"X":-405.747,"Y":-191.0,"Z":-194.293,"ID":1,"Active":true},"C":{"X":-405.816,"Y":-191.0,"Z":-173.724,"ID":2,"Active":true},"D":{"X":-426.258,"Y":-191.0,"Z":-173.785,"ID":3,"Active":true},"One":{"X":-415.859,"Y":-191.0,"Z":-211.895,"ID":4,"Active":true},"Two":{"X":-387.99,"Y":-191.0,"Z":-184.483,"ID":5,"Active":true},"Three":{"X":-416.005,"Y":-191.0,"Z":-156.455,"ID":6,"Active":true},"Four":{"X":-443.841,"Y":-191.0,"Z":-184.173,"ID":7,"Active":true}}
+```
