Added macros and new images for blood rage, added steel/spell macros for QG.

--- a/src/content/docs/drs/bloodrage.mdx
+++ b/src/content/docs/drs/bloodrage.mdx
@@ -109,6 +109,16 @@ it’s important to get as much as you can under BR. If the DRK player has a str
 - <a href="https://www.youtube.com/watch?v=LskfJWkP7QE&feature=youtu.be" target="_blank">Small Meme Video that Demonstrates the timing for building stacks and ability usage during Blood Rush by Valagnar Shade</a>
 <br/><hr/>
 
+#### Blood Rage Training Wheels Macro
+```
+/micon "Duty Action I"
+/gaction "Duty Action I"
+/echo "Use Dash" <se.7> <wait.15>
+/echo "Use Dash" <se.7> <wait.15>
+/echo "Use Dash" <se.7> <wait.1>
+/echo "Burst!" <se.15>
+```
+
 ## Impetus Chaining
 :::danger[WARNING!!!!]
 PLEASE GET YOUR PARTY/THE RAID LEAD’S PERMISSION OUTSIDE OF RECLEARS! THIS CAN GET PEOPLE KILLED IF THEY AREN'T EXPECTING IT, ESPECIALLY ON TA!
@@ -148,13 +158,13 @@ it’s a good way to spread out damage evenly throughout the instance. Did I men
 ### Infographics
 #### Impetus Chaining Graphic
 <Image
-    src="/drs/impetus.png"
+    src="/drs/blood_chain.png"
     width="400"
     height="100"
     decoding="async"
     loading="eager"
     alt="DSR Cheatsheet"
-    onclick="window.open('/drs/impetus.png','_blank')"
+    onclick="window.open('/drs/blood_chain.png','_blank')"
     style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
 />
 <p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
