--- a/src/content/docs/drs/guides/guards.mdx
+++ b/src/content/docs/drs/guides/guards.mdx
@@ -27,6 +27,33 @@ import Footer from "@components/Footer.astro";
 />
 <p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
 
+#### How to click off Spellforge / Steelsting
+(macros for each client language!)
+
+**EN**
+```
+/statusoff "Lost Spellforge"
+/statusoff "Lost Steelsting"
+```
+
+**JP**
+```
+/statusoff "ロスト・スペルフォージ"
+/statusoff "ロスト・スチールスティング"
+```
+
+**DE**
+```
+/statusoff "Verschollene Zauberschmiede"
+/statusoff "Verschollener Stahlstachel"
+```
+
+**FR**
+```
+/statusoff "Forgesort oublié"
+/statusoff "Morsure de l'acier oubliée"
+```
+
 ### Markers
 **Reflector/Dispel Setup Markers**
 ```
